Add footer to sign-up page

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="header-wrapper">
+      <div class="container">
         <div class="header-title">
           <a href="#"><h1>Banka</h1></a>
         </div>
@@ -19,5 +19,9 @@
         </div>
       </div>
     </header>
+    <section></section>
+    <footer class="container">
+      <p>Banka, Copyright &copy; 2019</p>
+    </footer>
   </body>
 </html>
