Finish Sign Up Page
Add main section to the page and media queries for responsivity across
tablet and mobile devices.

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -19,8 +19,37 @@
         </div>
       </div>
     </header>
-    <section></section>
-    <footer class="container">
+    <main>
+      <section class="container section">
+        <div class="login-form">
+          <h2 class="form-title">Sign Up Form</h2>
+          <form>
+            <div>
+              <label for="fname">Fullname:</label>
+              <input id="fname" type="text" />
+            </div>
+            <div>
+              <label for="username">Username:</label>
+              <input id="username" type="text" />
+            </div>
+            <div>
+              <label for="email">Email:</label>
+              <input id="email" type="text" />
+            </div>
+            <div>
+              <label for="pwrd">Password:</label>
+              <input id="pwrd" type="password" />
+            </div>
+            <div>
+              <label for="confirm-pwrd">Confirm Password:</label>
+              <input id="confirm-pwrd" type="password" />
+            </div>
+            <button type="submit">Sign Up</button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer>
       <p>Banka, Copyright &copy; 2019</p>
     </footer>
   </body>
