Add form validation to Sign Up Page

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -26,23 +26,42 @@
           <form>
             <div>
               <label for="fname">Fullname:</label>
-              <input id="fname" type="text" />
+              <input id="fname" type="text" pattern="[a-zA-Z ]{5,30}" />
             </div>
             <div>
               <label for="username">Username:</label>
-              <input id="username" type="text" />
+              <input
+                id="username"
+                type="text"
+                pattern="[a-zA-Z0-9]{5,30}"
+                title="Alphanumeric only. At least 5 characters"
+              />
             </div>
             <div>
               <label for="email">Email:</label>
-              <input id="email" type="text" />
+              <input
+                id="email"
+                type="text"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              />
             </div>
             <div>
               <label for="pwrd">Password:</label>
-              <input id="pwrd" type="password" />
+              <input
+                id="pwrd"
+                type="password"
+                pattern=".{6,10}"
+                title="At least six(6) characters"
+              />
             </div>
             <div>
               <label for="confirm-pwrd">Confirm Password:</label>
-              <input id="confirm-pwrd" type="password" />
+              <input
+                id="confirm-pwrd"
+                type="password"
+                pattern=".{6,10}"
+                title="At least six(6) characters"
+              />
             </div>
             <button type="submit">Sign Up</button>
           </form>
