--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <section class="container section">
-        <div class="login-form">
+        <div class="form-input">
           <h2 class="form-title">Sign In</h2>
           <form>
             <div>
