Design create account page layout

--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -15,14 +15,14 @@
         <div class="header-links">
           <a class="pre-login-link" href="#">Sign Up</a>
           <a class="pre-login-link" href="#">Login</a>
-          <a class="post-login-link" href="#">Osaukhu</a>
+          <a class="post-login-link unused-link" href="#">Osaukhu</a>
         </div>
       </div>
     </header>
     <main>
       <section class="container section">
         <div class="form-input">
-          <h2 class="form-title">Sign In</h2>
+          <h2>Sign In</h2>
           <form>
             <div>
               <label for="username">Username:</label>
