--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -42,7 +42,7 @@
                 title="At least six(6) characters"
               />
             </div>
-            <button type="submit">Login</button>
+            <button class="form-button" type="submit">Login</button>
           </form>
         </div>
       </section>
