--- a/UI/signup.html
+++ b/UI/signup.html
@@ -63,7 +63,7 @@
                 title="At least six(6) characters"
               />
             </div>
-            <button type="submit">Sign Up</button>
+            <button class="form-button" type="submit">Sign Up</button>
           </form>
         </div>
       </section>
