Make minor UI changes
Apply some minor changes to UI of sign-up, sign-in and create-account
pages.

--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -20,24 +20,22 @@
       </div>
     </header>
     <main>
-      <section class="container section">
+      <section class="container signup-login">
         <div class="form-input">
           <h2>Sign In</h2>
           <form>
             <div>
-              <label for="username">Username:</label>
               <input
-                id="username"
                 type="text"
+                placeholder="Username"
                 pattern="[a-zA-Z0-9]{5,30}"
                 title="Alphanumeric only. At least 5 characters"
               />
             </div>
             <div>
-              <label for="pswrd">Password:</label>
               <input
-                id="pswrd"
                 type="password"
+                placeholder="Password"
                 pattern=".{6,10}"
                 title="At least six(6) characters"
               />
