--- a/UI/create_account.html
+++ b/UI/create_account.html
@@ -20,71 +20,142 @@
       </div>
     </header>
     <main>
-      <section class="create-acc-container section">
-        <div>
+      <section class="container section">
+        <div class="create-acc-form">
           <h2 class="form-title">Open a bank account</h2>
-        </div>
+          <form>
+            <!-- <div class="form-section"> -->
 
-        <form class="create-acc-form">
-          <div class="form-section">
-            <h3 class="form-section-title">Personal Information</h3>
-            <div class="form-field">
-              <label for="firstname">First Name:</label>
-              <input id="firstname" type="text" pattern="[a-zA-Z]{2,15}" />
-            </div>
-            <div class="form-field">
-              <label for="lastname">Last Name:</label>
-              <input id="lastname" type="text" pattern="[a-zA-Z]{2,15}" />
-            </div>
-            <div class="form-field">
-              <label for="nationality">Nationality:</label>
-              <input id="nationality" type="text" pattern="[a-zA-Z]{2,10}" />
-            </div>
-            <div class="form-field">
-              <label for="occupation">Occupation:</label>
-              <input id="occupation" type="text" pattern="[a-zA-Z ]{4,20}" />
-            </div>
-            <div class="form-field">
-              <div id="form-gender" class="left">
-                <label for="gender">Gender:</label>
-                <span>M</span> <input type="radio" name="gender" id="gender" />
-                <span>F</span> <input type="radio" name="gender" id="gender" />
+            <!-- <div class="form-field">
+              <label for="firstname">First Name:</label> -->
+            <div>
+              <div class="display-half-div left-side">
+                <input
+                  placeholder="First Name"
+                  type="text"
+                  pattern="[a-zA-Z]{2,15}"
+                />
               </div>
-              <div id="form-date" class="left">
-                <label for="date">Date:</label>
-                <input type="date" id="date" />
+
+              <div class="display-half-div right-side">
+                <input
+                  placeholder="Last Name"
+                  type="text"
+                  pattern="[a-zA-Z]{2,15}"
+                />
               </div>
             </div>
+
+            <!-- </div>
             <div class="form-field">
-              <label for="phone">Phone:</label>
-              <input id="phone" type="tel" pattern="[0-9]{11}" />
+              <label for="lastname">Last Name:</label> -->
+
+            <!-- </div>
+            <div class="form-field">
+              <label for="nationality">Nationality:</label> -->
+            <input
+              placeholder="Nationality"
+              type="text"
+              pattern="[a-zA-Z]{2,10}"
+            />
+            <!-- </div>
+            <div class="form-field">
+              <label for="occupation">Occupation:</label> -->
+            <input
+              placeholder="Occupation"
+              type="text"
+              pattern="[a-zA-Z ]{4,20}"
+            />
+            <!-- </div>
+            <div class="form-field"> -->
+            <div>
+              <div class="display-half-div left-side">
+                <select name="gender">
+                  <option disabled selected>Gender</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+              </div>
+              <div class="display-half-div right-side">
+                <input type="number" placeholder="Age" />
+              </div>
             </div>
-          </div>
-          <div class="form-section">
+            <!-- <div id="form-date" class="left"> -->
+
+            <!-- </div> -->
+            <!-- </div>
+            <div class="form-field">
+              <label for="phone">Phone:</label> -->
+            <input placeholder="Phone Number" type="tel" pattern="[0-9]{11}" />
+            <!-- </div>
             <h3 class="form-section-title">Residential Address</h3>
             <div class="form-field">
-              <label for="firstname">Address Line 1:</label>
-              <input id="firstname" type="text" pattern="[a-zA-Z0-9 ,]{4,30}" />
-            </div>
+              <label for="firstname">Address Line 1:</label> -->
+            <input
+              placeholder="Address Line 1"
+              type="text"
+              pattern="[a-zA-Z0-9 ,]{4,30}"
+            />
+            <!-- </div>
             <div class="form-field">
-              <label for="lastname">Address Line 2:</label>
-              <input id="lastname" type="text" pattern="[a-zA-Z0-9 ,]{4,30}" />
-            </div>
+              <label for="lastname">Address Line 2:</label> -->
+            <input
+              placeholder="Address Line 2"
+              type="text"
+              pattern="[a-zA-Z0-9 ,]{4,30}"
+            />
+            <!-- </div>
             <div class="form-field">
-              <label for="nationality">City:</label>
-              <input
-                id="nationality"
-                type="text"
-                pattern="[a-zA-Z0-9 ]{3,15}"
-              />
+              <label for="nationality">City:</label> -->
+            <div>
+              <div class="display-half-div left-side">
+                <input
+                  type="text"
+                  placeholder="City"
+                  pattern="[a-zA-Z0-9 ]{3,15}"
+                />
+              </div>
+              <div class="display-half-div right-side">
+                <input
+                  placeholder="State"
+                  type="text"
+                  pattern="[a-zA-Z0-9 ]{3,15}"
+                />
+              </div>
             </div>
+
+            <!-- </div>
             <div class="form-field">
-              <label for="occupation">State:</label>
-              <input id="occupation" type="text" pattern="[a-zA-Z0-9 ]{3,15}" />
-            </div>
+              <label for="occupation">State:</label> -->
+
+            <button class="form-button" type="submit">Create Account</button>
+            <!-- </div> -->
+          </form>
+        </div>
+
+        <!-- </div> -->
+        <!-- <div class="form-section"> -->
+        <!-- <h3 class="form-section-title">Residential Address</h3> -->
+        <!--
+            <div class="form-field">
+            <label for="firstname">Address Line 1:</label>
+            <input id="firstname" type="text" pattern="[a-zA-Z0-9 ,]{4,30}" />
           </div>
-          <button class="form-button" type="submit">Create Account</button>
-        </form>
+          <div class="form-field">
+            <label for="lastname">Address Line 2:</label>
+            <input id="lastname" type="text" pattern="[a-zA-Z0-9 ,]{4,30}" />
+          </div>
+          <div class="form-field">
+            <label for="nationality">City:</label>
+            <input id="nationality" type="text" pattern="[a-zA-Z0-9 ]{3,15}" />
+          </div>
+          <div class="form-field">
+            <label for="occupation">State:</label>
+            <input id="occupation" type="text" pattern="[a-zA-Z0-9 ]{3,15}" />
+          </div> 
+        -->
+        <!-- </div> -->
+        <!-- </form> -->
       </section>
     </main>
     <footer>
