--- a/UI/signup.html
+++ b/UI/signup.html
@@ -9,19 +9,19 @@
   <body>
     <header>
       <div class="container">
-        <div class="header-title">
+        <div id="header-title">
           <a href="#"><h1>Banka</h1></a>
         </div>
-        <div class="header-links">
+        <div id="header-links">
           <a class="pre-login-link" href="#">Sign Up</a>
           <a class="pre-login-link" href="#">Login</a>
-          <a class="post-login-link unused-link" href="#">Osaukhu</a>
+          <a class="unused-link" href="#">Logged in as Osaukhu</a>
         </div>
       </div>
     </header>
     <main>
-      <section class="container signup-login">
-        <div class="form-input">
+      <section id="signup-login" class="container">
+        <div id="signup-login-form">
           <h2>Sign Up Form</h2>
           <form>
             <div>
