--- a/UI/create_account.html
+++ b/UI/create_account.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Sign Up</title>
+    <title>Banka | Create Account</title>
   </head>
   <body>
     <header>
@@ -32,7 +32,6 @@
                   pattern="[a-zA-Z]{2,15}"
                 />
               </div>
-
               <div class="display-half-div right-side">
                 <input
                   placeholder="Last Name"
