--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Sign Up</title>
+    <title>Banka | Sign In</title>
   </head>
   <body>
     <header>
