--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section id="signup-login" class="container">
-        <div id="signup-login-form">
+        <div id="all-form">
           <h2>Sign In</h2>
           <form>
             <div>
