Finish debit-user (withdrawal) page

--- a/UI/debit_user.html
+++ b/UI/debit_user.html
@@ -23,7 +23,7 @@
     <main>
       <section id="deposit-withdraw" class="container">
         <div id="all-form">
-          <h2>Deposit Form</h2>
+          <h2>Withdrawal Form</h2>
           <form>
             <div>
               <input
@@ -68,7 +68,7 @@
                 title="Ten(10) digits"
               />
             </div>
-            <button class="form-button" type="submit">Credit Account</button>
+            <button class="form-button" type="submit">Debit Account</button>
           </form>
         </div>
       </section>
