--- a/UI/bank_account_record.html
+++ b/UI/bank_account_record.html
@@ -22,7 +22,12 @@
     </header>
     <main>
       <section id="account-record" class="container account-details">
-        <h3 class="dashboard-section-title">Account Details</h3>
+        <h3 class="dashboard-section-title">
+          Account Details
+          <a href="accounts_list.html"
+            ><button class="acc-rec-bck-btn">Back</button></a
+          >
+        </h3>
         <div class="details-div">
           <div class="display-full-div">
             <div class="display-half-div left-side">
@@ -64,7 +69,9 @@
                 </button></a
               >
               <a href="accounts_list.html"
-                ><button class="acc-rec-btn acc-rec-back-btn">Back</button></a
+                ><button class="acc-rec-btn acc-rec-activate-btn">
+                  Deactivate
+                </button></a
               >
             </div>
           </div>
