Finish create-admin-staff page

--- a/UI/bank_account_record.html
+++ b/UI/bank_account_record.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Banka | Dashboard</title>
+    <title>Banka | Bank Account Record</title>
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <a href="#">Logged in as Osaukhu</a>
+          <a href="#">Logged in as Admin</a>
         </div>
       </div>
     </header>
