--- a/UI/accounts_list.html
+++ b/UI/accounts_list.html
@@ -16,7 +16,7 @@
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <a href="#">Logged in as Osaukhu</a>
+          <a href="#">Logged in as Admin</a>
         </div>
       </div>
     </header>
