--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -21,16 +21,15 @@
       </div>
     </header>
     <main>
-      <section id="signup-login" class="container">
+      <section id="login" class="container">
         <div id="all-form">
           <h2>Sign In</h2>
           <form>
             <div>
               <input
-                type="text"
-                placeholder="Username"
-                pattern="[a-zA-Z0-9]{5,30}"
-                title="Alphanumeric only. At least 5 characters"
+                type="email"
+                placeholder="Email"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
               />
             </div>
             <div>
