Complete transaction details page

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -91,7 +91,7 @@
         <h3 class="dashboard-section-title">Transaction History</h3>
         <div class="trns-hist-details details-div">
           <ul>
-            <a href="#"
+            <a href="transaction.html"
               ><li>
                 <div class="display-full-div">
                   <p class="trns-details-side">23 MAR 2019</p>
@@ -100,7 +100,7 @@
                 </div>
               </li></a
             >
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">16 FEB 2019</p>
@@ -109,7 +109,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">26 JAN 2019</p>
@@ -118,7 +118,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">7 DEC 2018</p>
@@ -127,7 +127,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">1 DEC 2018</p>
@@ -136,7 +136,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">20 NOV 2018</p>
@@ -145,7 +145,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">16 FEB 2019</p>
@@ -154,7 +154,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">26 JAN 2019</p>
@@ -163,7 +163,7 @@
                 </div>
               </li>
             </a>
-            <a href="#">
+            <a href="transaction.html">
               <li>
                 <div class="display-full-div">
                   <p class="trns-details-side">7 DEC 2018</p>
