--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,11 +11,11 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="#"><h1>Banka</h1></a>
+          <a href="signup.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
-          <a class="pre-login-link" href="#">Sign Up</a>
-          <a class="pre-login-link" href="#">Login</a>
+          <a class="pre-login-link" href="signup.html">Sign Up</a>
+          <a class="pre-login-link" href="sign_in.html">Login</a>
           <a class="unused-link" href="#">Logged in as Osaukhu</a>
         </div>
       </div>
@@ -29,58 +29,83 @@
             <div>
               <div class="display-half-div left-side">
                 <input
-                  placeholder="First Name"
                   type="text"
+                  placeholder="First Name"
                   pattern="[a-zA-Z]{2,15}"
+                  title="Alphabets only. Max 15 characters"
+                  required
                 />
               </div>
               <div class="display-half-div right-side">
                 <input
-                  placeholder="Last Name"
                   type="text"
+                  placeholder="Last Name"
                   pattern="[a-zA-Z]{2,15}"
+                  title="Alphabets only. Max 15 characters"
+                  required
                 />
               </div>
             </div>
             <input
-              placeholder="Nationality"
               type="text"
+              placeholder="Nationality"
               pattern="[a-zA-Z]{2,10}"
+              title="Alphabets only. Max 10 characters"
+              required
             />
             <input
-              placeholder="Occupation"
               type="text"
+              placeholder="Occupation"
               pattern="[a-zA-Z ]{4,20}"
+              title="Alphabets only. Max 20 characters"
+              required
             />
             <div>
               <div class="display-half-div left-side">
-                <select name="gender">
-                  <option disabled selected>Gender</option>
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
+                <select name="gender" required>
+                  <option disabled value="" selected>Gender</option>
+                  <option value="male" required>Male</option>
+                  <option value="female" required>Female</option>
                 </select>
               </div>
               <div class="display-half-div right-side">
-                <input type="number" placeholder="Age" />
+                <input
+                  type="number"
+                  placeholder="Age"
+                  pattern="[0-9]{1,3}"
+                  title="Numbers only. Max 3 digits"
+                  required
+                />
               </div>
             </div>
             <h3>Contact Information</h3>
-            <input placeholder="Phone Number" type="tel" pattern="[0-9]{11}" />
+            <input
+              type="tel"
+              placeholder="Phone Number"
+              pattern="[0-9]{11}"
+              title="Eleven(11) digits"
+              required
+            />
             <input
               type="email"
               placeholder="Email"
               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              title="Must follow standard email format"
+              required
             />
             <h3>Residential Information</h3>
             <input
-              placeholder="Address Line 1"
               type="text"
+              placeholder="Address Line 1"
               pattern="[a-zA-Z0-9 ,]{4,30}"
+              title="No special characters. Max 30 characters"
+              required
             />
             <input
-              placeholder="Address Line 2"
               type="text"
+              placeholder="Address Line 2 (Optional)"
               pattern="[a-zA-Z0-9 ,]{4,30}"
+              title="No special characters. Max 30 characters"
             />
             <div>
               <div class="display-half-div left-side">
@@ -88,13 +113,17 @@
                   type="text"
                   placeholder="City"
                   pattern="[a-zA-Z0-9 ]{3,15}"
+                  title="No special characters. Three(3) to Fifteen(15) characters"
+                  required
                 />
               </div>
               <div class="display-half-div right-side">
                 <input
-                  placeholder="State"
                   type="text"
+                  placeholder="State"
                   pattern="[a-zA-Z0-9 ]{3,15}"
+                  title="No special characters. Three(3) to Fifteen(15) characters"
+                  required
                 />
               </div>
             </div>
@@ -103,7 +132,8 @@
               type="password"
               placeholder="Password"
               pattern=".{6,10}"
-              title="At least six(6) characters"
+              title="Must be between Six(6) to Ten(10) characters"
+              required
             />
             <button class="form-button" type="submit">Sign Up</button>
           </form>
