--- a/UI/bank_account_record.html
+++ b/UI/bank_account_record.html
@@ -63,16 +63,16 @@
               </p>
             </div>
             <div class="display-half-div left-side">
-              <a href="accounts_list.html"
-                ><button class="acc-rec-btn delete-acc-btn">
+              <form>
+                <button class="acc-rec-btn delete-acc-btn" type="submit">
                   Delete Account
-                </button></a
-              >
-              <a href="accounts_list.html"
-                ><button class="acc-rec-btn acc-rec-activate-btn">
+                </button>
+              </form>
+              <form>
+                <button class="acc-rec-btn acc-rec-activate-btn" type="submit">
                   Deactivate
-                </button></a
-              >
+                </button>
+              </form>
             </div>
           </div>
         </div>
