Make minor changes to header section

--- a/UI/credit_user.html
+++ b/UI/credit_user.html
@@ -16,7 +16,7 @@
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <a href="#">Logged in as Osaukhu</a>
+          <p>Logged In As Cashier 1</p>
         </div>
       </div>
     </header>
