--- a/UI/bank_account_record.html
+++ b/UI/bank_account_record.html
@@ -16,7 +16,7 @@
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <a href="#">Logged in as Admin</a>
+          <p>Logged In As Admin</p>
         </div>
       </div>
     </header>
