Minor refactor of css styling

--- a/UI/cr_admin_staff.html
+++ b/UI/cr_admin_staff.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section id="cr-staff-account" class="container">
-        <div id="all-form">
+        <div class="all-form">
           <h2>Create A Staff Account</h2>
           <form>
             <div>
