--- a/UI/create_account.html
+++ b/UI/create_account.html
@@ -23,7 +23,7 @@
     </header>
     <main>
       <section id="create-account" class="container">
-        <div id="all-form">
+        <div class="all-form">
           <h2>Step 2: Open A Bank Account</h2>
           <form>
             <div>
