--- a/UI/credit_user.html
+++ b/UI/credit_user.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section id="deposit-withdraw" class="container">
-        <div id="all-form">
+        <div class="all-form">
           <h2>Deposit Form</h2>
           <form>
             <div>
