--- a/UI/signup.html
+++ b/UI/signup.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section id="signup" class="container">
-        <div class="signup-form">
+        <div id="signup-form" class="all-form">
           <h2 class="form-title">Step 1: Register As A Banka User</h2>
           <form>
             <h3>Personal Information</h3>
